fixed colors for dark mode buttons and stars

--- a/src/index.css
+++ b/src/index.css
@@ -181,10 +181,10 @@ All colors MUST be HSL.
 .dark footer {
   color: #000000 !important;
 }
-/* 
+
 .dark #faq h2 {
-  color: #000000 !important;
-} */
+  color: #ffffff !important;
+}
 
 .dark #faq .text-neutral-800 {
   color: #000000 !important;
@@ -195,9 +195,9 @@ All colors MUST be HSL.
   background-color: hsl(var(--primary)) !important;
 }
 
-/* .dark .section-future h2 {
-  color: #000000 !important;
-} */
+.dark .section-future h2 {
+  color: #ffffff !important;
+}
 
 .dark .section-future .text-neutral-800 {
   color: #000000 !important;
